# graph_rag

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  graph_visualization.ipynb  ollama_inference.py  pyproject.toml
.github/workflows/: ci.yml
datasets/toy/: corpus_standard.csv  qa_standard.csv
files/templates/: answering_bl.txt  answering_prompt.txt  decompose_prompt.txt  reasoning_bl.txt  reasoning_prompt.txt  template_ner.txt  template_ner_v2.txt  template_re.txt  template_re_v2.txt
src/: config.py  directory_reader.py  main.py  run_eval.py  run_pipeline.py
src/agents/: base.py  naive.py
src/benchmark/: datasets_beir.py  evaluation.py
src/chunk_processor/: neo4j_ingestion.py
src/chunk_to_network/: neo4j_processor.py
src/dataset_reader/: document_reader.py  reader.py
src/evaluation_framework/answer_generation/: answer_generation_executor.py
src/evaluation_framework/benchmark_adapters/: dummy_adapter.py  hotpot_qa_adapter.py  multihop_rag_adapter.py  (+2 more)
src/file_readers/: base.py  factory.py  pdf_reader.py  text_reader.py
src/knowledge_graphs/: advanced_construction_pipeline.py  construction_pipeline.py  utils.py
src/retrieval/: agent_factory.py  base.py  baseline_cot.py  decomposition_agent.py  graph_retrieval_mixin.py  hybrid_agent.py  independent_cascade.py  linear_threshold.py  modified_diffusion_agent.py  naive_rag.py  retrieval_config.py  retrieval_prompt_manager.py  retriever.py
src/tools/: context_recorder.py  embedding.py  evaluation.py  llm_output.py  loggers.py  neo4j_tools.py  summarization.py
tests/: test_file_readers.py  test_neo4j_queries.py  test_rag.py
(+10 files in other folders)
